# idna-rust

./: .gitignore  CLAUDE.md  Cargo.toml  README.md
.github/workflows/: ci.yml
benches/: idna_comparison.rs
src/: domain.rs  lib.rs  mapping.rs  normalization.rs  punycode.rs  unicode.rs  unicode_tables.rs  validation.rs
tests/: identifier_tests.rs  mapping_tests.rs  punycode_tests.rs  to_ascii_tests.rs  to_unicode_tests.rs  wpt_fixture_tests.rs  wpt_tests.rs
tests/fixtures/: to_ascii_alternating.txt  to_unicode_alternating.txt  utf8_punycode_alternating.txt
